<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    tools:context="com.example.android.coffeeorder.MainActivity">


    <TextView
        android:id="@+id/main_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/coffee_order_app"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_textSize"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/sub_heading_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/number_of_coffee"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_textSize"/>


    <TextView
        android:id="@+id/quantity_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center"
        android:text="@string/quantity_counter"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/extra_large_textSize"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/add_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="addCoffee"
            android:text="@string/add_coffee"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_textSize"
            tools:ignore="ButtonStyle"/>


        <Button
            android:id="@+id/remove_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="removeCoffee"
            android:text="@string/remove_coffee"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_textSize"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>


    <TextView
        android:id="@+id/sub_heading_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/small_padding"
        android:text="@string/total_to_pay"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_textSize"/>


    <TextView
        android:id="@+id/price_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center"
        android:text="@string/price_counter"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/extra_large_textSize"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary"
        android:onClick="resetAll"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/large_padding"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textSize"/>
</LinearLayout>
